--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,8 @@
-@import './common';
-@import './example';
+@import './utils/vars';
+@import './base/base';
+@import './layout/header';
+@import './layout/logo';
+@import './layout/footer';
+
+
+
