correct an error

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,6 @@
 @import './layout/logo';
 @import './layout/footer';
 @import './components/hero';
-@import './components/form'
+@import './components/form';
 
 
