--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,7 +4,5 @@
 @import './layout/logo';
 @import './layout/footer';
 @import './components/hero';
+@import './components/team';
 @import './components/form';
-
-
-
