--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,71 @@
 <footer class="footer">
-    <h1>Наші контакти</h1>
-    <button type="button">Підписатися</button>
+  <div class="footer__section">
+    <h1 class="footer__title">Автори проекту:</h1>
+    <ol class="footer__link">
+      <li>
+        <a href="https://github.com/SaveAna" class="contacts_text">SaveAna</a>
+      </li>
+      <li>
+        <a href="https://github.com/YablonskaTanya" class="contacts_text"
+          >YablonskaTanya</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/ViktoriiaKN" class="contacts_text"
+          >ViktoriiaKN</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/latikaann" class="contacts_text"
+          >latikaann</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/IrynaBuchma" class="contacts_text"
+          >IrynaBuchma</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/YuriiSVL" class="contacts_text">YuriiSVL</a>
+      </li>
+      <li>
+        <a href="https://github.com/olhacrash" class="contacts_text"
+          >olhacrash</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/ViktorKryvorotov" class="contacts_text"
+          >ViktorKryvorotov</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/TarasVarvarych" class="contacts_text"
+          >TarasVarvarych</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/vyacheslav-i" class="contacts_text"
+          >vyacheslav-i</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/Anastasiya38" class="contacts_text"
+          >Anastasiya38</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/PavloGPS" class="contacts_text">PavloGPS</a>
+      </li>
+      <li>
+        <a href="https://github.com/Annamako" class="contacts_text">Annamako</a>
+      </li>
+      <li>
+        <a href="https://github.com/OleksandrOliynyk6891" class="contacts_text"
+          >OleksandrOliynyk6891</a
+        >
+      </li>
+    </ol>
+  </div>
+
+  <button type="button" class="footer__button">Підписатися</button>
 </footer>
