--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,3 +6,5 @@
 @import './components/hero';
 @import './components/team';
 @import './components/form';
+@import './components/sviper';
+@import './components/coverflov';
