--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,3 +8,4 @@
 @import './components/form';
 @import './components/sviper';
 @import './components/coverflov';
+@import './components/effect-cards';
